# dual-agents

./: .env.example  .gitignore  CONSTITUTION.md  CONTRIBUTING.md  DUAL_AGENT_THREAD_HANDOFF.md  LICENSE  NOTICE  README.md  dual-agent-features-master.md  pyproject.toml
.github/: pull_request_template.md
bugs/: 20260314-dual-agent-delivery-miss-postmortem.md
docs/: forum-adjudication-eval.md  forum-replay-eval.md  premium-token-eval.md
docs/plans/: 2026-03-13-dual-agent-orchestrator.md  2026-03-20-endpoint-preflight.md  2026-03-28-dual-agent-watchdog-run-state.md
docs/superpowers/plans/: 2026-03-17-stop-monitoring.md
docs/templates/: codex-decision-review-template.md
epic/documentation/: USER_GUIDE.md  cover.html  write-user-description-dual-agent-log.md
src/dual_agents/: __init__.py  cli.py  codex_review.py  completeness_analyzer.py  config.py  controller.py  eval_forum.py  eval_replay.py  eval_stop_monitor.py  opencode_assets.py  review_packet.py  state.py  stop_monitor.py  watchdog.py  workflow.py
tests/: test_cli.py  test_codex_review.py  test_completeness_analyzer.py  test_config.py  test_controller.py  test_eval_forum.py  test_eval_replay.py  test_eval_stop_monitor.py  test_export.py  test_opencode_assets.py  test_readme_contract.py  test_review_packet.py  test_review_validator.py  test_state.py  test_stop_monitor.py  test_watchdog.py  test_workflow.py
